--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "drizzle-orm": "^0.34.1",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.3.19",
+    "fs": "0.0.1-security",
     "geist": "^1.3.1",
     "lucide-react": "^0.446.0",
     "nanoid": "^5.0.8",
